tests/rosetta/transpiler/Elixir/animate-a-pendulum.error
run: exit status 1
    warning: variable "seed" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 14 │               seed = v
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:14:15: Main._now/0

    warning: variable "seeded" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 15 │               seeded = true
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:15:15: Main._now/0

    warning: variable "n" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 63 │       {n, sum, term} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:63:8: Main.sinApprox/1

    warning: variable "term" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 63 │       {n, sum, term} = try do
    │                ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:63:16: Main.sinApprox/1

    warning: variable "n" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 90 │       {n, sum, term} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:90:8: Main.cosApprox/1

    warning: variable "term" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 90 │       {n, sum, term} = try do
    │                ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:90:16: Main.cosApprox/1

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 114 │       {guess, i} = try do
     │               ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:114:15: Main.sqrtApprox/1

     error: undefined variable "t"
     │
 133 │     {t} = Enum.reduce((0..(10 - 1)), {t}, fn step, {t} ->
     │                                       ^
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:133:39: Main.main/0

     warning: variable "step" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 133 │     {t} = Enum.reduce((0..(10 - 1)), {t}, fn step, {t} ->
     │                                              ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:133:46: Main.main/0

     warning: variable "t" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 133 │     {t} = Enum.reduce((0..(10 - 1)), {t}, fn step, {t} ->
     │      ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs:133:6: Main.main/0

** (CompileError) /workspace/mochi/tests/rosetta/transpiler/Elixir/animate-a-pendulum.exs: cannot compile module Main (errors have been logged)

